# swiss-knife-generic-slm

./: CLAUDE.md  LICENSE  README.md  SAGEMAKER_DEPLOYMENT.md  pyproject.toml
src/swiss_knife/: __init__.py  cli.py  data_preparation.py  distillation.py  evaluation.py  initialization.py  losses.py  utils.py
terraform/: main.tf  monitoring.tf  terraform.tfvars.example  variables.tf
